--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!--
+    Project: portfolio site
+    Author: Owen Rasor
+    Description:  Personal portfolio website showcasing software projects, and screen printing business
+    Changes:
+        - Added disclaimer header
+        - Changed theme in .css
+        - Add toggle theme control
+        - Add mobile responsiveness
+-->
+
+
 <!DOCTYPE html>
 
 <html lang = "en">
@@ -6,7 +18,8 @@
     <meta charset = "UTF-8">
     <meta name = "viewport" content = "width = device-width, initial-scale = 1.0">
     <title>Owen Rasor Portfolio</title>
-    <link rel = "stylesheet" href = "main.css">
+    <link rel = "stylesheet" href = "./css/main.css">
+    <button id="toggle-theme">Toggle Theme</button>
 </head>
 
 <body>
@@ -25,36 +38,42 @@
     <main>
         <section id="about">
             <h2>About Me</h2>
-            <p>
-                My name is Owen Rasor, and I am a Software Engineering student at Utah Valley University.
-                In addition to my studies, I have built a small business called XTRAJANK, where I design and
-                screen print unique apparel. I personally manage everything from design and printing to selling
-                at local markets. This experience has strengthened my ability to think creatively, solve problems
-                efficiently, and adapt to new challenges.
-            </p>
-            <p>I have worked on a variety of software development projects, including:</p>
-            <ul>
-                <li>Memory Simulator (Python, kivy): A virtual machine that executes Basic Machine Language and simulates memory management.</li>
-                <li>File Transfer Appliction (Python, tkinter): A program for secure and efficient file transfers.</li>
-                <li>Simple Banking Application (C#): A system for account management.</li>
-                <li>Circular Buffer (C++): A high performance data structure for managing a fixed-size buffer.</li>
-            </ul>
-            <p>
-                In addition to Python, C++, and C#, I have experience with C, .NET, Kivy, Tkinter, and Git.
-                I enjoy working on both low-level systems programming and GUI development, allowing me to create
-                intuitive and functional applications.
-            </p>
-            <p>
-                On the creative side, I have screen printed hundreds of designs on t-shirts,
-                hoodies, blankets, and tote bags. I find fulfillment in both coding and design, as both
-                require problem-solving, attention to detail, and innovation.
-            </p>
-            <h3>My Goals</h3>
-            <p>
-                My goal is to become a software engineer where I can apply my creativity, knowledge, and skills
-                to build meaningful applications. I am passionate about designing efficient, user-friendly software and
-                constantly seeking opportunities to grow and learn in the field.
-            </p>
+            <div class="about-container">
+                <div class="about-intro">
+                    <p>
+                        My name is Owen Rasor, and I am a Software Engineering student at Utah Valley University.
+                        In addition to my studies, I have built a small business called XTRAJANK, where I design and
+                        screen print unique apparel. I personally manage everything from design and printing to selling
+                        at local markets. This experience has strengthened my ability to think creatively, solve problems
+                        efficiently, and adapt to new challenges.
+                    </p>
+                    <p>I have worked on a variety of software development projects, including:</p>
+                    <ul>
+                        <li>Memory Simulator (Python, kivy): A virtual machine that executes Basic Machine Language and simulates memory management.</li>
+                        <li>File Transfer Appliction (Python, tkinter): A program for secure and efficient file transfers.</li>
+                        <li>Simple Banking Application (C#): A system for account management.</li>
+                        <li>Circular Buffer (C++): A high performance data structure for managing a fixed-size buffer.</li>
+                    </ul>
+                    <p>
+                        In addition to Python, C++, and C#, I have experience with C, .NET, Kivy, Tkinter, and Git.
+                        I enjoy working on both low-level systems programming and GUI development, allowing me to create
+                        intuitive and functional applications.
+                    </p>
+                    <p>
+                        On the creative side, I have screen printed hundreds of designs on t-shirts,
+                        hoodies, blankets, and tote bags. I find fulfillment in both coding and design, as both
+                        require problem-solving, attention to detail, and innovation.
+                    </p>
+                </div>
+                <div class="about-goals">
+                    <h3>My Goals</h3>
+                    <p>
+                        My goal is to become a software engineer where I can apply my creativity, knowledge, and skills
+                        to build meaningful applications. I am passionate about designing efficient, user-friendly software and
+                        constantly seeking opportunities to grow and learn in the field.
+                    </p>
+                </div>
+            </div>
         </section>
 
         <section id="projects" style="display:none;">
@@ -87,18 +106,18 @@
         <section id="screenprinting" style="display:none;">
             <h2>Screen Printing</h2>
             <video controls>
-                <source src="logo_animation.mp4" type="video/mp4">
+                <source src="./img/logo_animation.mp4" type="video/mp4">
             </video>
             <figure>
-                <img src="dirtbird.jpg" alt="Dirtbird Shirt">
+                <img src="./img/dirtbird.jpg" alt="Dirtbird Shirt">
                 <figcaption>Dirtbird shirt I designed inspired by sea birds.</figcaption>
             </figure>
             <figure>
-                <img src="sleuth.jpg" alt="Sleuth Shirt">
+                <img src="./img/sleuth.jpg" alt="Sleuth Shirt">
                 <figcaption>I designed this shirt after reading a mystery book.</figcaption>
             </figure>
             <figure>
-                <img src="booth.JPG" alt="Booth">
+                <img src="./img/booth.JPG" alt="Booth">
                 <figcaption>This is my booth for Hazel Avenue's summer market.</figcaption>
             </figure>
         </section>
@@ -108,7 +127,7 @@
             <ul>
                 <li><strong>Email:</strong> owen.rasor8@gmail.com</li>
             </ul>
-            <img src="profile-small.jpg" alt="Me!">
+            <img src="./img/profile-small.jpg" alt="Me!">
         </section>
     </main>
 
@@ -116,6 +135,6 @@
         <p>Find me on <a href="https://github.com/xtrajank">GitHub</a> | Email: owen.rasor8@gmail.com | <a href="https://www.linkedin.com/in/owen-rasor/">LinkedIn</a></p>
     </footer>
 
-    <script src="main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 </html>
